--- a/COMPONENT2/CSS/style.css
+++ b/COMPONENT2/CSS/style.css
@@ -1,14 +1,18 @@
-@import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Poppins:wght@300&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
 :root {
   --green: #27ae60;
-  --black:#2c2c54;
+  --black: #130f40;
+  --orange: #ff7800;
+  --light-color: #666;
+  --box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.1);
+  --border: 0.2rem solid rgba(0, 0, 0, 0.1);
+  --outline: 0.1rem solid rgba(0, 0, 0, 0.1);
+  --outline-hover: 0.2rem solid var(--black);
 }
 * {
   margin: 0;
   padding: 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
   border: none;
   outline: none;
@@ -20,127 +24,253 @@
   background-color: var(--green);
   color: white;
 }
-html{
-   font-size: 62.%;
-   overflow-x: hidden;
-   scroll-padding-top: 6.5rem;
-   scroll-behavior: smooth;
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+  scroll-padding-top: 6.5rem;
+  scroll-behavior: smooth;
 }
-.header-1{
-    background:#eee ;
-    display: flex;
-    justify-content: space-between;
-    padding: 2rem 9%;
-    align-items: center;
+body {
+  background: #eee;
 }
-.logo{
-    color: var(--black);
-    font-weight: bold;
-    font-size: 3rem;    
+.btn {
+  margin-top: 0.7rem;
+  display: inline-block;
+  padding: 0.5rem 2.5rem;
+  font-size: 1.5rem;
+  border-radius: 0.5rem;
+  border: 0.2rem solid var(--black);
+  color: var(--black);
+  cursor: pointer;
+  background: none;
 }
-.logo i{
-    padding-right: .5rem;
-    color: var(--green);
+.btn:hover {
+  background: var(--orange);
 }
-.header-1 .search-box-container{
-    display: flex;
-    height: 2.5rem;
+/* *******************header start**************** */
+.header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 2rem 9%;
+  background: #fff;
+  box-shadow: var(--box-shadow);
 }
-.header-1 .search-box-container #search-box{
-    height: 100%;
-    /* width: 100%; */
-    padding: 0.5rem;
-    font-size: 1rem;
-    color: #333;
-    border: .1rem solid rgba(0,0,0,.3);
-    text-transform: none;
+.header .logo {
+  font-size: 3rem;
+  font-weight: bold;
+  color: var(--black);
 }
-.header-1 .search-box-container label{
-    height: 100%;
-    width: 3.5rem;
-    line-height: 2.5rem;
+.header .logo i {
+  color: var(--orange);
+}
+.header .navbar a {
+  font-size: 2.2rem;
+  margin: 0 1.4rem;
+  color: var(--black);
+}
+.header .navbar a:hover {
+  color: var(--orange);
+}
+.header .icons div {
+  height: 4.5rem;
+  width: 4.5rem;
+  line-height: 4.5rem;
+  border-radius: 0.5rem;
+  color: var(--black);
+  font-size: 3rem;
+  margin: 0 0.5rem;
+  text-align: center;
+  cursor: pointer;
+}
+.header .icons div:hover {
+  background: var(--orange);
+  color: #fff;
+}
+#menu-btn {
+  display: none;
+}
+.header .search-form {
+  position: absolute;
+  top: 110%;
+  right: -110%;
+  width: 35rem;
+  height: 4rem;
+  background: #fff;
+  border-radius: 0.5rem;
+  display: flex;
+  align-items: center;
+  overflow: hidden;
+  box-shadow: var(--box-shadow);
+}
+.header .search-form.active {
+  right: 2rem;
+  transition: 0.6s linear;
+}
+.header .search-form input {
+  height: 100%;
+  width: 100%;
+  background: none;
+  font-size: 1.7rem;
+  color: var(--black);
+  padding: 0 1.5rem;
+}
+.header .search-form label {
+  font-size: 2.5rem;
+  padding-right: 1.5rem;
+  color: var(--black);
+  cursor: pointer;
+}
+.header .search-form label:hover {
+  color: var(--orange);
+}
+.header .shopping-cart {
+  position: absolute;
+  top: 110%;
+  right:-110%;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: var(--box-shadow);
+  width: 38rem;
+  background: #fff;
+}
+.header .shopping-cart.active{
+  right: 2rem;
+  transition: .3s linear;
+}
+.header .shopping-cart .box {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  position: relative;
+  margin: 2.4rem 0;
+}
+.header .shopping-cart .box img {
+  height: 9rem;
+}
+.header .shopping-cart .box .fa-trash {
+  font-size: 2.4rem;
+  position: absolute;
+  top: 50%;
+  right: 1rem;
+  cursor: pointer;
+  color: var(--light-color);
+  transform: translateY(-50%);
+}
+.header .shopping-cart .box .fa-trash:hover {
+  color: var(--orange);
+}
+.header .shopping-cart .box .content h3 {
+  color: var(--black);
+  font-size: 1.8rem;
+  padding-bottom: 1rem;
+}
+.header .shopping-cart .box .content span {
+  color: var(--light-color);
+  font-size: 1.7rem;
+}
+.header .shopping-cart .box .content .quantity {
+  padding-left: 1rem;
+}
+.header .shopping-cart .total {
+  font-size: 2.2rem;
+  padding: 0.5rem 0;
+  text-align: center;
+}
+.header .shopping-cart .btn{
+  display: block;
+  text-align: center;
+  margin: 1rem;
+}
+.header .login-form{
+  position: absolute;
+  top: 110%;
+  right:-110%;
+  width: 35rem;
+  box-shadow: var(--box-shadow);
+  padding: 2rem ;
+  border-radius: .5rem;
+  background: #fff;
+  text-align: center;
+}
+.header .login-form.active{
+  right: 2rem;
+  transition: .3s linear;
+}
+.header .login-form h3{
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  color: var(--black);
+}
+.header .login-form .box{
+  width: 100%;
+  margin: .7rem 0;
+  background: #eee;
+  border-radius: .5rem;
+  padding: 1rem;
+  font-size: 1.6rem;
+  color: var(--black);
+}
+.header .login-form p{
+  font-size: 1.4rem;
+  padding: .5rem 0;
+  color: var(--light-color);
+}
+.header .login-form p a{
+  color: var(--orange);
+  text-decoration: underline;
+}
+/* *************header end************* */
+/* ******************media queries************ */
+@media (min-width:1000px)and(max-width:1240px){
+  .header .icons div {
     font-size: 2rem;
-    color: white;
-    background-color: var(--green);
-    text-align: center;
-    cursor: pointer;
+  }
+  .header .navbar a {
+    font-size: 1.7rem;
+  }
 }
-.header-1 .search-box-container input{
-    width: 80%;
+@media (max-width: 991px) {
+  html{
+    font-size: 50%;
+  }
+  .header{
+    padding: 2rem;
+  }
 }
-.header-1 .search-box-container label:hover{
-    background-color: var(--black);
-}
-.header-2{
-    background:#fff ;
-    display: flex;
-    justify-content: space-between;
-    padding: 2rem 9%;
-    align-items: center;
-    position: relative;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.1);
-}
-.header-2 .navbar a{
-    font-size:1.5rem ;
-    padding:.5rem 2rem ;
+
+@media (max-width:768px){
+  .header .navbar{
+    position: absolute;
+    top: 110%;
+    right: -110%;
+    width: 30rem;
+    box-shadow: var(--box-shadow);
     border-radius: .5rem;
-    color: var(--black);
-
-}
-.header-2 .navbar a:hover{
-    background-color: var(--green);
-    color: #fff;
-}
-.header-2 .icons a{
-    color: var(--black);
+    background: #fff;
+  }
+  .header .navbar.active{
+    right: 2rem;
+    transition: .3s linear;
+  }
+  .header .navbar a{
     font-size: 2rem;
-    padding-left: 1rem;
-    margin: 0 1rem;
-}
-.header-2 .icons a:hover{
-    color: var(--green);
-}
-#menu-bar{
-    font-size: 1.5rem;
-    border-radius: 0.5rem;
-    border: .1rem solid var(--black);
-    padding: .5rem .8rem;
-    color: var(--black);
-    cursor: pointer;
-    display: none;
+    margin: 2rem 2.5rem;
+    display: block;
 
+  }
+  #menu-btn{
+    display: inline-block;
+  }
 }
-@media(max-width:1200px){
+@media (max-width: 450px) {
     html{
-        font-size: 55%;
-    }
-}
-@media(max-width:991px){
-    .header-1,
-    .header-2{
-        padding: 2rem;
-    }
-}
-@media(max-width:768px){
-    #menu-bar{
-        display: initial;
-    }
-    .header-2 .navbar{
-        position: absolute;
-        top: 100%;
-        left: 0;
-        right: 0;
-        background:var(--black);
-        padding: 1rem 2rem;
-    }
-    .header-2 .navbar a{
-        font-size: 2.5rem;
-        display: block;
-        text-align: center;
-        background: #fff;
-        padding: 1rem;
-        margin: 1.5rem 0;
-
+      font-size: 45%;
     }
 }
 
