--- a/COMPONENT2/CSS/style.css
+++ b/COMPONENT2/CSS/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap");
+
 :root {
   --green: #27ae60;
   --black: #130f40;
@@ -9,6 +10,7 @@
   --outline: 0.1rem solid rgba(0, 0, 0, 0.1);
   --outline-hover: 0.2rem solid var(--black);
 }
+
 * {
   margin: 0;
   padding: 0;
@@ -20,19 +22,43 @@
   text-transform: capitalize;
   text-decoration: none;
 }
+
 *::selection {
   background-color: var(--green);
   color: white;
 }
+
 html {
   font-size: 62.5%;
   overflow-x: hidden;
   scroll-padding-top: 6.5rem;
   scroll-behavior: smooth;
 }
+
 body {
   background: #eee;
 }
+
+section {
+  padding: 2rem 9%;
+}
+
+.heading {
+  text-align: center;
+  padding: 2rem 0;
+  padding-bottom: 3rem;
+  font-size: 3.5rem;
+  color: var(--black);
+}
+
+.heading span {
+  background: var(--orange);
+  color: #fff;
+  display: inline-block;
+  padding: .5rem 3rem;
+  clip-path: polygon(100% 0, 93% 50%, 100% 99%, 0% 100%, 7% 50%, 0% 0%);
+}
+
 .btn {
   margin-top: 0.7rem;
   display: inline-block;
@@ -44,9 +70,12 @@ body {
   cursor: pointer;
   background: none;
 }
+
 .btn:hover {
   background: var(--orange);
+  color: #fff;
 }
+
 /* *******************header start**************** */
 .header {
   position: fixed;
@@ -61,22 +90,27 @@ body {
   background: #fff;
   box-shadow: var(--box-shadow);
 }
+
 .header .logo {
-  font-size: 3rem;
+  font-size: 2.5rem;
   font-weight: bold;
   color: var(--black);
 }
+
 .header .logo i {
   color: var(--orange);
 }
+
 .header .navbar a {
-  font-size: 2.2rem;
-  margin: 0 1.4rem;
+  font-size: 1.7rem;
+  margin: 0 1rem;
   color: var(--black);
 }
+
 .header .navbar a:hover {
   color: var(--orange);
 }
+
 .header .icons div {
   height: 4.5rem;
   width: 4.5rem;
@@ -84,17 +118,20 @@ body {
   border-radius: 0.5rem;
   color: var(--black);
   font-size: 3rem;
-  margin: 0 0.5rem;
+  margin-left: 0.3rem;
   text-align: center;
   cursor: pointer;
 }
+
 .header .icons div:hover {
   background: var(--orange);
   color: #fff;
 }
+
 #menu-btn {
   display: none;
 }
+
 .header .search-form {
   position: absolute;
   top: 110%;
@@ -108,41 +145,48 @@ body {
   overflow: hidden;
   box-shadow: var(--box-shadow);
 }
+
 .header .search-form.active {
   right: 2rem;
   transition: 0.6s linear;
 }
+
 .header .search-form input {
   height: 100%;
   width: 100%;
   background: none;
-  font-size: 1.7rem;
+  font-size: 1.6rem;
   color: var(--black);
   padding: 0 1.5rem;
 }
+
 .header .search-form label {
-  font-size: 2.5rem;
+  font-size: 2.2rem;
   padding-right: 1.5rem;
   color: var(--black);
   cursor: pointer;
 }
+
 .header .search-form label:hover {
   color: var(--orange);
 }
+
 .header .shopping-cart {
   position: absolute;
   top: 110%;
-  right:-110%;
+  right: -110%;
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: var(--box-shadow);
   width: 38rem;
   background: #fff;
 }
-.header .shopping-cart.active{
+
+.header .shopping-cart.active {
   right: 2rem;
-  transition: .3s linear;
+  transition: 0.3s linear;
 }
+
 .header .shopping-cart .box {
   display: flex;
   align-items: center;
@@ -150,11 +194,13 @@ body {
   position: relative;
   margin: 2.4rem 0;
 }
+
 .header .shopping-cart .box img {
   height: 9rem;
 }
+
 .header .shopping-cart .box .fa-trash {
-  font-size: 2.4rem;
+  font-size: 2rem;
   position: absolute;
   top: 50%;
   right: 1rem;
@@ -162,116 +208,253 @@ body {
   color: var(--light-color);
   transform: translateY(-50%);
 }
+
 .header .shopping-cart .box .fa-trash:hover {
   color: var(--orange);
 }
+
 .header .shopping-cart .box .content h3 {
   color: var(--black);
-  font-size: 1.8rem;
+  font-size: 1.7rem;
   padding-bottom: 1rem;
 }
+
 .header .shopping-cart .box .content span {
   color: var(--light-color);
-  font-size: 1.7rem;
+  font-size: 1.6rem;
 }
+
 .header .shopping-cart .box .content .quantity {
   padding-left: 1rem;
 }
+
 .header .shopping-cart .total {
   font-size: 2.2rem;
   padding: 0.5rem 0;
   text-align: center;
 }
-.header .shopping-cart .btn{
+
+.header .shopping-cart .btn {
   display: block;
   text-align: center;
   margin: 1rem;
 }
-.header .login-form{
+
+.header .login-form {
   position: absolute;
   top: 110%;
-  right:-110%;
+  right: -110%;
   width: 35rem;
   box-shadow: var(--box-shadow);
-  padding: 2rem ;
-  border-radius: .5rem;
+  padding: 2rem;
+  border-radius: 0.5rem;
   background: #fff;
   text-align: center;
 }
-.header .login-form.active{
+
+.header .login-form.active {
   right: 2rem;
-  transition: .3s linear;
+  transition: 0.3s linear;
 }
-.header .login-form h3{
+
+.header .login-form h3 {
   font-size: 2.5rem;
   text-transform: uppercase;
   color: var(--black);
 }
-.header .login-form .box{
+
+.header .login-form .box {
   width: 100%;
-  margin: .7rem 0;
+  margin: 0.7rem 0;
   background: #eee;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   padding: 1rem;
   font-size: 1.6rem;
   color: var(--black);
 }
-.header .login-form p{
+
+.header .login-form p {
   font-size: 1.4rem;
-  padding: .5rem 0;
+  padding: 0.5rem 0;
   color: var(--light-color);
 }
-.header .login-form p a{
+
+.header .login-form p a {
   color: var(--orange);
   text-decoration: underline;
 }
+
 /* *************header end************* */
-/* ******************media queries************ */
-@media (min-width:1000px)and(max-width:1240px){
-  .header .icons div {
-    font-size: 2rem;
-  }
-  .header .navbar a {
-    font-size: 1.7rem;
-  }
+
+.home {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: url(../img/bg.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding-top: 17rem;
+  padding-top: 10rem;
 }
+
+.home .content {
+  text-align: center;
+  width: 60rem;
+  padding: 4rem 0;
+
+}
+
+.home .content h3 {
+  color: var(--black);
+  font-size: 3rem;
+}
+
+.home .content h3 span {
+  color: #e510a4;
+}
+
+.home .content p {
+  color: var(--light-color);
+  font-size: 1.7rem;
+  padding: 1rem 0;
+  line-height: 1.8;
+}
+
+.features .box-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
+  gap: 1.5rem;
+}
+
+.features .box-container .box {
+  padding: 3rem 2rem;
+  background: #fff;
+  outline: var(--outline);
+  outline-offset: -1rem;
+  text-align: center;
+  box-shadow: var(--box-shadow);
+}
+
+.features .box-container .box:hover {
+  outline: var(--outline-hover);
+  outline-offset: 0rem;
+}
+
+.features .box-container .box img {
+  height: 15rem;
+  margin: 1rem 0;
+}
+
+.features .box-container .box h3 {
+  font-size: 2.5rem;
+  line-height: 1.8;
+  color: var(--black);
+}
+
+.features .box-container .box p {
+  font-size: 1.5rem;
+  line-height: 1.8;
+  color: var(--light-color);
+  padding: 1rem 0;
+}
+.products .product-slider{
+     padding: 1rem;
+}
+.products .product-slider:first-child{
+  margin-bottom: 2rem;
+}
+.products .product-slider .box{
+    background: #fff;
+    border-radius: .5rem;
+    text-align: center;
+    padding: 3rem 1rem;
+    outline-offset: -1rem;
+    outline: var(--outline);
+    box-shadow: var(--box-shadow);
+    transition: .2s linear;
+}
+.products .product-slider .box:hover{
+  outline-offset: 0rem;
+  outline: var(--outline-hover);
+}
+.products .product-slider .box img{
+  height: 20rem;
+}
+.products .product-slider .box h3{
+  font-size: 2.5rem;
+  color: var(--black);
+}
+.products .product-slider .box .price{
+   font-size: 2rem;
+   color: var(--light-color);
+   padding: .5rem 0;
+}
+.products .product-slider .box .stars i{
+  font-size: 1.7rem;
+  color: var(--orange);
+  padding: .5rem 0;
+
+}
+
+
+/* ******************media queries************ */
 @media (max-width: 991px) {
-  html{
-    font-size: 50%;
+  html {
+    font-size: 55%;
   }
-  .header{
+
+  .header {
+    padding: 2rem;
+  }
+
+  section {
     padding: 2rem;
   }
 }
 
-@media (max-width:768px){
-  .header .navbar{
+@media (max-width: 768px) {
+  .header .navbar {
     position: absolute;
     top: 110%;
     right: -110%;
     width: 30rem;
     box-shadow: var(--box-shadow);
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     background: #fff;
   }
-  .header .navbar.active{
+
+  .header .navbar.active {
     right: 2rem;
-    transition: .3s linear;
+    transition: 0.3s linear;
   }
-  .header .navbar a{
+
+  .header .navbar a {
     font-size: 2rem;
     margin: 2rem 2.5rem;
     display: block;
-
   }
-  #menu-btn{
+
+  .header .search-form {
+    width: 90%;
+  }
+
+  .header .shopping-cart {
+    width: 60%;
+  }
+
+  #menu-btn {
     display: inline-block;
   }
 }
+
 @media (max-width: 450px) {
-    html{
-      font-size: 45%;
-    }
+  html {
+    font-size: 50%;
+  }
+
+  .header .shopping-cart {
+    width: 90%;
+  }
 }
 
 /* *****************header start********** */
