--- a/COMPONENT2/CSS/style.css
+++ b/COMPONENT2/CSS/style.css
@@ -322,7 +322,7 @@ section {
 .features .box-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
-  gap: 1.5rem;
+  gap: 3.5rem;
 }
 
 .features .box-container .box {
@@ -537,10 +537,25 @@ section {
   color: var(--light-color);
   font-size: 1.5rem;
 }
+.blogs .box-container .box .content .icons a:hover{
+  color: var(--black);
+}
 
 .blogs .box-container .box .content .icons a i {
   color: var(--orange);
   padding-right: 0.5rem;
+}
+.blogs .box-container .box .content h3{
+  line-height: 1.8rem;
+  color: var(--black);
+  font-size: 2.2rem;
+  padding: .5rem 0;
+}
+.blogs .box-container .box .content p{
+  line-height: 1.8rem;
+  color: var(--light-color);
+  font-size: 1.5rem;
+  padding: .5rem 0;
 }
 
 /* * ******************media queries************ */
