--- a/COMPONENT2/CSS/style.css
+++ b/COMPONENT2/CSS/style.css
@@ -281,6 +281,7 @@ right: 50rem;
   font-size: 1.4rem;
   padding: 0.5rem 0;
   color: var(--light-color);
+  border-bottom: 1px solid grey;
 }
 
 .header .signup-form p a {
@@ -316,10 +317,13 @@ right: 50rem;
 }
 .header .signup-form .btn{
   width: 50%;
-  background: green;
-  color: white;
+  background:#fff;
+  color: var(--black);
   font-weight: bold;
   border-radius: 0.8rem;
+}
+.header .signup-form .btn:hover{
+  background: var(--orange);
 }
 .header .signup-form .gender{
   display: flex;
@@ -340,6 +344,7 @@ right: 50rem;
 }
 .header .signup-form .text p{
   text-align: left;
+  border: none;
 }
 
 .header .signup-form .text p a{
@@ -662,8 +667,92 @@ right: 50rem;
   font-size: 1.5rem;
   padding: .5rem 0;
 }
+
+/* blogs section ends******************* */
+
+/* deals section starts******************* */
+.deals{
+  background: url(../img/woman-basket.jpg) no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 7rem 0;
+  margin-top: 7rem;
+  
+}
+.deals .content .heading{
+  font-size: 4rem;
+  color: var(--black);
+}
+.deals .content{
+  max-width: 50rem;
+  margin-left: 10rem;
+}
+.deals .content p{
+  font-size: 1.7rem;
+  padding: 1rem 0;
+  color: #333;
+}
+.deals .content .count-down{
+  display: flex;
+  gap: 1rem;
+  padding: .5rem 0;
+}
+.deals .content .count-down .box{
+  width: 9rem;
+  text-align: center;
+  box-shadow: var(--box-shadow);
+  border: var(--border);
+}
+.deals .content .count-down .box h3{
+  color: var(--black);
+  background: #fff;
+  height: 7rem;
+  line-height: 7rem;
+  width: 100%;
+  font-size: 5rem;
+}
+.deals .content .count-down .box span{
+  background: var(--black);
+  color: #fff;
+  width: 100%;
+  padding: .5rem;
+  font-size: 2rem;
+  display: block;
+}
+/* blogs section ends******************* */
+
+.contact form{
+  text-align: center;
+  padding:1rem ;
+  border: .1rem solid rgba(0,0,0,.3) ;
+}
+.contact form .inputbox{
+   display: flex;
+   justify-content: space-between;
+   flex-wrap: wrap;
+}
+.contact form .inputbox input, 
+.contact form .inputbox textarea{
+  padding: 1rem;
+  font-size: 1.7rem;
+  background:#f7f7f7 ;
+  text-transform: none;
+  margin: 1rem 0;
+  border: .1rem solid rgba(0,0,0,.3);
+  width: 49%;
+}
+.contact form textarea{
+  height: 20rem;
+  resize: none;
+  width: 100%;
+
+}
+
+
+/* footer***************** */
 .footer{
   background: #fff;
+  margin-top: 5rem;
 
 }
 .footer .box-container{
@@ -693,7 +782,7 @@ right: 50rem;
   padding-right: 2rem;
 }
 .footer .box-container .box p{
-line-height: 1.8;
+  line-height: 1.8;
   font-size: 1.5rem;
   color: var(--light-color);
   padding: 1rem 0;
@@ -717,7 +806,6 @@ line-height: 1.8;
 .footer .box-container .box img{
   height: 35rem;
   width: 35rem;
-  border-radius: 50%;
 }
 .footer .credit{
   text-align: center;
@@ -791,6 +879,19 @@ line-height: 1.8;
     width: 90%;
     margin: 1rem 2rem;
   }
+  .deals{
+    background-position: left;
+  }
+  .deals .content{
+    max-width: 100%;
+    text-align: center;
+  }
+  .deals .content .count-down{
+    justify-content: center;
+  }
+  .contact form .inputbox input{
+    width: 100%;
+  }
 }
 
 @media (max-width: 450px) {
@@ -801,13 +902,11 @@ line-height: 1.8;
   .header .shopping-cart {
     width: 90%;
   }
+  .deals .content .count-down .box h3{
+    font-size: 4rem;
+  }
   .footer{
     text-align: center;
   }
 }
 
-/* *****************header start********** */
-
-/* ****************end header-section************* */
-/* **************** main-section start************* */
-/* **************** main -section end************* */
