--- a/COMPONENT2/CSS/style.css
+++ b/COMPONENT2/CSS/style.css
@@ -239,22 +239,14 @@ section {
   text-align: center;
   margin: 1rem;
 }
-
-.header .login-form {
-  position: absolute;
-  top: 110%;
-  right: -110%;
-  width: 35rem;
-  box-shadow: var(--box-shadow);
-  padding: 2rem;
-  border-radius: 0.5rem;
-  background: #fff;
-  text-align: center;
+.container{
+  width: 95%;
+  margin: auto;
 }
 .header .signup-form{
   position: absolute;
   top: 110%;
-right: 50rem;
+  right: 50rem;
   box-shadow: var(--box-shadow);
   padding: 2rem;
   border-radius: 0.5rem;
@@ -358,9 +350,17 @@ right: 50rem;
   font-size: 1.8rem;
   margin: 0 1rem;
 }
-.container{
-  width: 95%;
-  margin: auto;
+.header .login-form {
+  position: absolute;
+  top: 110%;
+  right: -110%;
+  width: 35rem;
+  box-shadow: var(--box-shadow);
+  padding: 2rem;
+  border-radius: 0.5rem;
+  background: #fff;
+  text-align: center;
+ 
 }
 .header .login-form.active {
   right: 2rem;
@@ -381,6 +381,7 @@ right: 50rem;
   padding: 1rem;
   font-size: 1.6rem;
   color: var(--black);
+  text-transform: none;
 }
 
 .header .login-form p {
@@ -395,7 +396,7 @@ right: 50rem;
 }
 
 /* *************header end************* */
-
+/* home section starts******************* */
 .home {
   display: flex;
   align-items: center;
@@ -423,12 +424,14 @@ right: 50rem;
 }
 
 .home .content p {
-  color: var(--light-color);
+  
   font-size: 1.7rem;
   padding: 1rem 0;
   line-height: 1.8;
 }
+/* home section ends******************* */ 
 
+/* features section starts******************* */
 .features .box-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
@@ -466,7 +469,9 @@ right: 50rem;
   color: var(--light-color);
   padding: 1rem 0;
 }
+/* features section ends******************* */
 
+/* products section starts******************* */
 .products .product-slider {
   padding: 1rem;
 }
@@ -522,7 +527,9 @@ right: 50rem;
   color: var(--orange);
   padding: 0.5rem 0;
 }
+/* products section ends******************* */
 
+/* categories section starts******************* */
 .categories .box-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
@@ -561,7 +568,9 @@ right: 50rem;
   line-height: 1.8;
   padding: 1rem 0;
 }
+/* categories section ends******************* */
 
+/* review section starts******************* */
 .review .review-slider {
   padding: 1rem;
 }
@@ -610,7 +619,9 @@ right: 50rem;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
   gap: 1.5rem;
 }
+/* review section ends******************* */
 
+/* blogs section starts******************* */
 .blogs .box-container {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
@@ -719,8 +730,9 @@ right: 50rem;
   font-size: 2rem;
   display: block;
 }
-/* blogs section ends******************* */
+/* deals section ends******************* */
 
+/* contact section starts******************* */
 .contact form{
   text-align: center;
   padding:1rem ;
@@ -745,11 +757,11 @@ right: 50rem;
   height: 20rem;
   resize: none;
   width: 100%;
-
 }
+/* contact section ends******************* */
 
 
-/* footer***************** */
+/* footer starts***************** */
 .footer{
   background: #fff;
   margin-top: 5rem;
@@ -819,6 +831,8 @@ right: 50rem;
 .footer .credit span{
   color: var(--orange);
 }
+/* footer ends***************** */
+
 /* * ******************media queries************ */
 @media (max-width: 1470px) {
   .products .swiper-wrapper .box {
